// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      nice game 
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-dxdKQw cuWvaS"
    >
      * 
    </span>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM sc-gVZcgN heJhVC ijAExg"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-hFQsEd sc-hKlkwe hNjprR ipLGyN"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-iucATu fnZuOR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      hey
       
      <span
        class="sc-edvVIM BgKKj sc-iucATu fnZuOR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-iucATu fnZuOR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      hey
       
      <span
        class="sc-edvVIM BgKKj sc-iucATu fnZuOR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      <span
        class="sc-edvVIM BgKKj sc-iucATu fnZuOR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-edvVIM BgKKj sc-iucATu fnZuOR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc DSCMc"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      Hey
       
      <span
        class="sc-edvVIM BgKKj sc-iucATu fnZuOR"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-jmvSDW kJMgdI"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX eipxVU"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX eipxVU"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX eipxVU"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-djDiuc jOQYWn"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
      tabindex="0"
    >
      <span
        class="sc-eillgj hCvGOa"
      >
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hKOsxR HaWPv"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-edvVIM BgKKj sc-egVbnM heJhVC"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-jmvSDW kJMgdI"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hKOsxR HaWPv"
    >
      : 
    </i>
    <span
      class="sc-hFQsEd hNjprR"
    >
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-hZoehQ gpXEYv"
        tabindex="-1"
      >
        <span
          class="sc-iXWgTX flSFEz"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
